# FastAPI_withDocker

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
api/: __init__.py  db.py  main.py  migrate_db.py
api/cruds/: done.py  task.py
api/routers/: done.py  task.py
api/schemas/: done.py  task.py
demo-app/: pyproject.toml
tests/: test_main.py
