[project]
name = "demo-app"
version = "0.1.0"
description = ""
authors = [
    {name = "imclaremont",email = "dhha1515@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]

[tool.poetry]
packages = [{include = "demo_app", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
